force-app/main/default/objects/TimeOffs__x/TimeOffs__x.object-meta.xml
<CustomObject>
    <description>TimeOffs</description>
    <externalDataSource>Workday</externalDataSource>
    <externalName>TimeOffs</externalName>
    <label>TimeOffs</label>
    <pluralLabel>TimeOffs</pluralLabel>
</CustomObject>