force-app/main/default/objects/TimeOffs__x/fields/Date_time_off__c.field-meta.xml
<CustomField>
    <fullName>Date_time_off__c</fullName>
    <description>Date_time_off</description>
    <externalDeveloperName>Date_time_off</externalDeveloperName>
    <label>Date_time_off</label>
    <type>DateTime</type>
</CustomField>