force-app/main/default/objects/TimeOffs__x/fields/Day_of_the_week__c.field-meta.xml
<CustomField>
    <fullName>Day_of_the_week__c</fullName>
    <description>Day_of_the_week</description>
    <externalDeveloperName>Day_of_the_week</externalDeveloperName>
    <label>Day_of_the_week</label>
    <length>128</length>
    <type>Text</type>
</CustomField>