force-app/main/default/objects/TimeOffs__x/fields/Employee_id__c.field-meta.xml
<CustomField>
    <fullName>Employee_id__c</fullName>
    <description>Employee_id</description>
    <externalDeveloperName>Employee_id</externalDeveloperName>
    <label>Employee_id</label>
    <length>128</length>
    <type>Text</type>
</CustomField>