force-app/main/default/objects/TimeOffs__x/fields/Requested__c.field-meta.xml
<CustomField>
    <fullName>Requested__c</fullName>
    <description>Requested</description>
    <externalDeveloperName>Requested</externalDeveloperName>
    <label>Requested</label>
    <length>128</length>
    <type>Text</type>
</CustomField>