force-app/main/default/objects/TimeOffs__x/fields/Unit_of_time__c.field-meta.xml
<CustomField>
    <fullName>Unit_of_time__c</fullName>
    <description>Unit_of_time</description>
    <externalDeveloperName>Unit_of_time</externalDeveloperName>
    <label>Unit_of_time</label>
    <length>128</length>
    <type>Text</type>
</CustomField>